@@ -20,10 +20,11 @@ package org.apache.drill.exec.physical.impl;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertTrue;
 
+import org.apache.drill.categories.UnlikelyTest;
 import org.apache.drill.common.config.DrillConfig;
 import org.apache.drill.exec.ExecTest;
 import org.apache.drill.exec.expr.fn.FunctionImplementationRegistry;
-import org.apache.drill.exec.ops.FragmentContext;
+import org.apache.drill.exec.ops.FragmentContextImpl;
 import org.apache.drill.exec.physical.PhysicalPlan;
 import org.apache.drill.exec.physical.base.FragmentRoot;
 import org.apache.drill.exec.planner.PhysicalPlanReader;
@@ -38,14 +39,15 @@ import org.junit.Test;
 import com.google.common.base.Charsets;
 import com.google.common.io.Resources;
 
-import mockit.Injectable;
+import org.junit.experimental.categories.Category;
+import org.mockito.Mockito;
 
+@Category({UnlikelyTest.class})
 public class TestStringFunctions extends ExecTest {
-
   private final DrillConfig c = DrillConfig.create();
   private PhysicalPlanReader reader;
   private FunctionImplementationRegistry registry;
-  private FragmentContext context;
+  private FragmentContextImpl context;
 
   public Object[] getRunResult(SimpleRootExec exec) {
     int size = 0;
@@ -65,10 +67,9 @@ public class TestStringFunctions extends ExecTest {
     return res;
  }
 
-  public void runTest(@Injectable final DrillbitContext bitContext,
-                      @Injectable UserClientConnection connection, Object[] expectedResults, String planPath) throws Throwable {
-
-    mockDrillbitContext(bitContext);
+  public void runTest(Object[] expectedResults, String planPath) throws Throwable {
+    final DrillbitContext bitContext = mockDrillbitContext();
+    final UserClientConnection connection = Mockito.mock(UserClientConnection.class);
 
     final String planString = Resources.toString(Resources.getResource(planPath), Charsets.UTF_8);
     if (reader == null) {
@@ -78,7 +79,7 @@ public class TestStringFunctions extends ExecTest {
       registry = new FunctionImplementationRegistry(c);
     }
     if (context == null) {
-      context =  new FragmentContext(bitContext, PlanFragment.getDefaultInstance(), connection, registry); //new FragmentContext(bitContext, ExecProtos.FragmentHandle.getInstance(), connection, registry);
+      context =  new FragmentContextImpl(bitContext, PlanFragment.getDefaultInstance(), connection, registry);
     }
     final PhysicalPlan plan = reader.readPhysicalPlan(planString);
     final SimpleRootExec exec = new SimpleRootExec(ImplCreator.getExec(context, (FragmentRoot) plan.getSortedOperators(false).iterator().next()));
@@ -93,138 +94,121 @@ public class TestStringFunctions extends ExecTest {
       }
     }
 
-    if (context.getFailureCause() != null) {
-      throw context.getFailureCause();
+    if (context.getExecutorState().getFailureCause() != null) {
+      throw context.getExecutorState().getFailureCause();
     }
-    assertTrue(!context.isFailed());
+    assertTrue(!context.getExecutorState().isFailed());
   }
 
   @Test
-  public void testCharLength(@Injectable final DrillbitContext bitContext,
-                           @Injectable UserClientConnection connection) throws Throwable {
-    Object [] expected = new Object[] {new Long(8), new Long(0), new Long(5), new Long(5),
-                                       new Long(8), new Long(0), new Long(5), new Long(5),
-                                       new Long(8), new Long(0), new Long(5), new Long(5),};
-    runTest(bitContext, connection, expected, "functions/string/testCharLength.json");
+  public void testCharLength() throws Throwable {
+    Object [] expected = new Object[] {Long.valueOf(8), Long.valueOf(0), Long.valueOf(5), Long.valueOf(5),
+                                       Long.valueOf(8), Long.valueOf(0), Long.valueOf(5), Long.valueOf(5),
+                                       Long.valueOf(8), Long.valueOf(0), Long.valueOf(5), Long.valueOf(5),};
+    runTest(expected, "functions/string/testCharLength.json");
   }
 
   @Test
-  public void testLike(@Injectable final DrillbitContext bitContext,
-                           @Injectable UserClientConnection connection) throws Throwable {
+  public void testLike() throws Throwable {
     final Object [] expected = new Object[] {Boolean.TRUE, Boolean.TRUE, Boolean.TRUE, Boolean.FALSE};
-    runTest(bitContext, connection, expected, "functions/string/testLike.json");
+    runTest(expected, "functions/string/testLike.json");
   }
 
   @Test
-  public void testSimilar(@Injectable final DrillbitContext bitContext,
-                           @Injectable UserClientConnection connection) throws Throwable {
+  public void testSimilar() throws Throwable {
     final Object [] expected = new Object[] {Boolean.TRUE, Boolean.FALSE, Boolean.TRUE, Boolean.FALSE};
-    runTest(bitContext, connection, expected, "functions/string/testSimilar.json");
+    runTest(expected, "functions/string/testSimilar.json");
   }
 
   @Test
-  public void testLtrim(@Injectable final DrillbitContext bitContext,
-                           @Injectable UserClientConnection connection) throws Throwable {
+  public void testLtrim() throws Throwable {
     final Object [] expected = new Object[] {"def", "abcdef", "dabc", "", "", ""};
-    runTest(bitContext, connection, expected, "functions/string/testLtrim.json");
+    runTest(expected, "functions/string/testLtrim.json");
   }
 
   @Test
-  public void testTrim(@Injectable final DrillbitContext bitContext,
-                           @Injectable UserClientConnection connection) throws Throwable {
+  public void testTrim() throws Throwable {
     final Object [] expected = new Object[] {"fghI", "", "", "!", " aaa "};
-    runTest(bitContext, connection, expected, "functions/string/testTrim.json");
+    runTest(expected, "functions/string/testTrim.json");
   }
 
   @Test
-  public void testReplace(@Injectable final DrillbitContext bitContext,
-                           @Injectable UserClientConnection connection) throws Throwable {
+  public void testReplace() throws Throwable {
     final Object [] expected = new Object[] {"aABABcdf", "ABABbABbcdf", "aababcdf", "acdf", "ABCD", "abc"};
-    runTest(bitContext, connection, expected, "functions/string/testReplace.json");
+    runTest(expected, "functions/string/testReplace.json");
   }
 
   @Test
-  public void testRtrim(@Injectable final DrillbitContext bitContext,
-                           @Injectable UserClientConnection connection) throws Throwable {
+  public void testRtrim() throws Throwable {
     final Object [] expected = new Object[] {"abc", "abcdef", "ABd", "", "", ""};
-    runTest(bitContext, connection, expected, "functions/string/testRtrim.json");
+    runTest(expected, "functions/string/testRtrim.json");
   }
 
   @Test
-  public void testConcat(@Injectable final DrillbitContext bitContext,
-                           @Injectable UserClientConnection connection) throws Throwable {
+  public void testConcat() throws Throwable {
     final Object [] expected = new Object[] {"abcABC", "abc", "ABC", ""};
-    runTest(bitContext, connection, expected, "functions/string/testConcat.json");
+    runTest(expected, "functions/string/testConcat.json");
   }
 
   @Test
-  public void testLower(@Injectable final DrillbitContext bitContext,
-                           @Injectable UserClientConnection connection) throws Throwable {
+  public void testLower() throws Throwable {
     final Object [] expected = new Object[] {"abcefgh", "abc", ""};
-    runTest(bitContext, connection, expected, "functions/string/testLower.json");
+    runTest(expected, "functions/string/testLower.json");
   }
 
   @Test
-  public void testPosition(@Injectable final DrillbitContext bitContext,
-                           @Injectable UserClientConnection connection) throws Throwable {
-    final Object [] expected = new Object[] {new Long(2), new Long(0), new Long(0), new Long(0),
-                                       new Long(2), new Long(0), new Long(0), new Long(0)};
-    runTest(bitContext, connection, expected, "functions/string/testPosition.json");
+  public void testPosition() throws Throwable {
+    final Object [] expected = new Object[] {Long.valueOf(2), Long.valueOf(0), Long.valueOf(0), Long.valueOf(0),
+                                       Long.valueOf(2), Long.valueOf(0), Long.valueOf(0), Long.valueOf(0)};
+    runTest(expected, "functions/string/testPosition.json");
   }
 
   @Test
-  public void testRight(@Injectable final DrillbitContext bitContext,
-                           @Injectable UserClientConnection connection) throws Throwable {
+  public void testRight() throws Throwable {
     final Object [] expected = new Object[] {"ef", "abcdef", "abcdef", "cdef", "f", "", ""};
-    runTest(bitContext, connection, expected, "functions/string/testRight.json");
+    runTest(expected, "functions/string/testRight.json");
   }
 
 
   @Test
-  public void testSubstr(@Injectable final DrillbitContext bitContext,
-                           @Injectable UserClientConnection connection) throws Throwable {
+  public void testSubstr() throws Throwable {
     final Object [] expected = new Object[] {"abc", "bcd", "bcdef", "bcdef", "", "", "", "", "भारत", "वर्ष", "वर्ष", "cdef", "", "", "", "ड्रिल"};
-    runTest(bitContext, connection, expected, "functions/string/testSubstr.json");
+    runTest(expected, "functions/string/testSubstr.json");
   }
 
   @Test
-  public void testLeft(@Injectable final DrillbitContext bitContext,
-                           @Injectable UserClientConnection connection) throws Throwable {
+  public void testLeft() throws Throwable {
     final Object [] expected = new Object[] {"ab", "abcdef", "abcdef", "abcd", "a", "", ""};
-    runTest(bitContext, connection, expected, "functions/string/testLeft.json");
+    runTest(expected, "functions/string/testLeft.json");
   }
 
   @Test
-  public void testLpad(@Injectable final DrillbitContext bitContext,
-                           @Injectable UserClientConnection connection) throws Throwable {
+  public void testLpad() throws Throwable {
     final Object [] expected = new Object[] {"", "", "abcdef", "ab", "ab", "abcdef", "AAAAabcdef", "ABABabcdef", "ABCAabcdef", "ABCDabcdef"};
-    runTest(bitContext, connection, expected, "functions/string/testLpad.json");
+    runTest(expected, "functions/string/testLpad.json");
   }
 
   @Test
-  public void testRegexpReplace(@Injectable final DrillbitContext bitContext,
-                           @Injectable UserClientConnection connection) throws Throwable {
+  public void testRegexpReplace() throws Throwable {
     final Object [] expected = new Object[] {"ThM", "Th", "Thomas"};
-    runTest(bitContext, connection, expected, "functions/string/testRegexpReplace.json");
+    runTest(expected, "functions/string/testRegexpReplace.json");
   }
 
   @Test
-  public void testRpad(@Injectable final DrillbitContext bitContext,
-                           @Injectable UserClientConnection connection) throws Throwable {
+  public void testRpad() throws Throwable {
     final Object [] expected = new Object[] {"", "", "abcdef", "ab", "ab", "abcdef", "abcdefAAAA", "abcdefABAB", "abcdefABCA", "abcdefABCD"};
-    runTest(bitContext, connection, expected, "functions/string/testRpad.json");
+    runTest(expected, "functions/string/testRpad.json");
   }
 
   @Test
-  public void testUpper(@Injectable final DrillbitContext bitContext,
-                           @Injectable UserClientConnection connection) throws Throwable {
+  public void testUpper() throws Throwable {
     final Object [] expected = new Object[] {"ABCEFGH", "ABC", ""};
-    runTest(bitContext, connection, expected, "functions/string/testUpper.json");
+    runTest(expected, "functions/string/testUpper.json");
   }
 
   @Test
-  public void testNewStringFuncs(@Injectable final DrillbitContext bitContext, @Injectable UserClientConnection connection) throws Throwable {
+  public void testNewStringFuncs() throws Throwable {
     final Object [] expected = new Object[] {97, 65, -32, "A", "btrim", "Peace Peace Peace ", "हकुना मताता हकुना मताता ", "katcit", "\u00C3\u00A2pple", "नदम"};
-    runTest(bitContext, connection, expected, "functions/string/testStringFuncs.json");
+    runTest(expected, "functions/string/testStringFuncs.json");
   }
 }
